--- a/resources/[ox]/ox_target/web/index.html
+++ b/resources/[ox]/ox_target/web/index.html
@@ -9,7 +9,7 @@
         <defs>
           <linearGradient id="spinningGradient" x1="0%" y1="0%" x2="100%" y2="100%">
             <stop offset="0%" style="stop-color:#00ccff; stop-opacity:1" />
-            <stop offset="100%" style="stop-color:#666666; stop-opacity:1" />
+            <stop offset="100%" style="stop-color:#0051ff; stop-opacity:1" />
           </linearGradient>
         </defs>
         <circle cx="256" cy="256" r="220" fill="rgba(23, 23, 23, 0.9)" class="circle" />
